Comments as of 1:19, Test Design doc made (incomplete)